	 status bar.
20031005 specplus3.c, tape.c, ui/ui.h, ui/gtk: better encapsulation of the
	 status bar routines.
20031005 machine.c, ui/ui.h, ui/gtk/statusbar.c: add a 'not available'
	 state for the disk statusbar item.
20031005 dck.c, machine.c, rzx.c, specplus3.c, trdos.c, ui/ui.h,
	 ui/gtk/gtkui.c: better encapsulation of the menu activation
	 routines.
20031005 widget/menu.c, widget/widget.c: use the new statusbar and menu
	 activation routines.
20031006 specplus3.c: if emulating a +2A, don't update the status of the
	 disk motor when the +2A/+3 memory port is written to.
20031006 machine.c: remove duplicated code from machine_select_machine()
20031006 settings.pl: change config file name to 'fuse.cfg' on Win32
20031006 settings.dat, ui/options.dat, ui/gtk/confirm.c: add option to
	 disable the 'confirm' dialogs.
20031006 debugger/command.c, debugger/commandy.y: better error recovery
20031007 ui/fb/fbdisplay.c, ui/fb/fbkeyboard.c: fix up framebuffer UI
	 (Darren).
20031007 Real joystick support (Darren/Fred)
20031008 ui/ggi/ggikeyboard.c: #include "fuse.h" (thanks, cmdzod)
20031008 settings.pl: don't segfault if there are empty string entries
	 in the config file.
20031008 fuse.c, utils.c: partial cleanup of the startup code: there is
	 now only one place at which each type of file is opened.
20031008 configure.in: correct joystick code detection if libjsw not
	 present.
20031008 ui/svga/svgakeyboard.c: F3 should open all files, not just
	 snapshots.
20031009 fuse.c: make the --record option record rather than playback.
20031009 fuse.c, settings.dat, ui/options.dat, ui/gtk/gtkui.c,
	 widget/menu.c: add option as to whether to embed snapshot when
	 creating RZX files from a given snapshot.
20031009 fuse.c: add information from uname() into creator custom data.
20031009 configure.in, ui/sdl/sdljoystick.c: if using SDL, use its
	 joystick code by default. Change BYTE etc in sdljoystick.c to
	 libspectrum_byte. Add missing ; to configure.in (Darren).